Fixed home page spacing

--- a/home/home.css
+++ b/home/home.css
@@ -25,7 +25,7 @@
     margin: 0px 25px;
     padding: 40px 0;
     line-height: 25px;
-    width: 100%;
+    width: 95%;
 }
 
 .experience-heading{
